United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7002957 (fc) FileChannel.transferTo fails to load libsendfile on Solaris 64-bit
7002957 : (fc) FileChannel.transferTo fails to load libsendfile on Solaris 64-bit

Details
Type:
Bug
Submit Date:
2010-11-26
Status:
Closed
Updated Date:
2011-05-18
Project Name:
JDK
Resolved Date:
2011-05-18
Component:
core-libs
OS:
generic
Sub-Component:
java.nio
CPU:
generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
7
Fixed Versions:
7

Related Reports
Backport:

Sub Tasks

Description
As per synopsis.

                                    

Comments
EVALUATION

On 64-bit the library is located in /lib/64 so the code is attempting to load it from the wrong location. One approach is that we have libnio link against libsendfile and avoid needing to load the library dynamically.
                                     
2010-11-26



Hardware and Software, Engineered to Work Together