7002957: (fc) FileChannel.transferTo fails to load libsendfile on Solaris 64-bit

Reviewed-by: chegar